# sicalc

./: .gitignore  LICENCE.md  LICENSE.txt  README.md  setup.cfg  setup.py
examples/: example1.py
src/phycalc/: _base.py  _frap.py  constants.py  func.py  units.py
src/sicalc/: _frap.py  constants.py  error_calc.py  func.py  units.py
