[metadata]
name = sicalc
version = 0.2.2
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE.txt
url = https://github.com/berndone/sicalc

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6

[options.packages.find]
where = src
